# koreaderToHardcover

./: .env.example  .gitignore  AGENTS.md  Dockerfile  GEMINI.md  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
docs/plans/: 2026-01-15-env-webdav-support.md  2026-01-15-hardcover-integration-design.md  2026-01-15-hardcover-sync-implementation.md  2026-01-21-docker-web-dashboard.md  2026-01-21-interactive-map-command.md
src/koreadertohardcover/: config.py  database.py  engine.py  hardcover_client.py  main.py  mapping.py  web.py  webdav_client.py
src/koreadertohardcover/templates/: base.html  dashboard.html  editions.html  logs.html  mapping.html
tests/: test_config.py  test_engine.py  test_hardcover_client.py  test_ingestion.py  test_interactive_map.py  test_webdav.py
