[project]
name = "koreadertohardcover"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.1",
    "duckdb>=1.4.3",
    "python-dotenv>=1.2.1",
    "webdav4>=0.10.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.12",
]
