[project]
name = "koreadertohardcover"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.2",
    "click>=8.3.1",
    "duckdb>=1.4.3",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.21",
    "rich>=14.2.0",
    "uvicorn[standard]>=0.40.0",
    "webdav4>=0.10.0",
]

[project.scripts]
koreadertohardcover = "koreadertohardcover.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov",
    "respx>=0.22.0",
    "ruff>=0.14.12",
]
